// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IntentsSentimentsSelect /> should render component with deprecated item 1`] = `
<div
  class="MultiSelectField"
  style="display: inline-block; padding-bottom: 2px;"
>
  <div
    class="container"
  >
    <div
      class="inputContainer multiSelectOptionField-dropdown"
    >
      <div
        class="dropdown"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class=""
          data-toggle="dropdown"
        >
          <input
            autocomplete="off"
            class="input"
            placeholder="Add intents..."
            value=""
          />
        </div>
        <div
          aria-hidden="true"
          class="options dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="option option--focused optionDeprecated dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span
              class="material-icons mr-1"
            >
              warning
            </span>
            <span>
              foo
            </span>
            <span
              class="ml-1"
            >
              (deprecated)
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              bar
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<IntentsSentimentsSelect /> should render component with deprecated item selected 1`] = `
<div
  class="MultiSelectField"
  style="display: inline-block; padding-bottom: 2px;"
>
  <div
    class="container"
  >
    <span
      class="tag badge badge-secondary"
    >
      <span
        class="tagText"
      >
        foo
      </span>
      <i
        class="material-icons ml-1 closeIcon"
      >
        close
      </i>
    </span>
    <div
      class="inputContainer multiSelectOptionField-dropdown"
    >
      <div
        class="dropdown"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class=""
          data-toggle="dropdown"
        >
          <input
            autocomplete="off"
            class="input"
            placeholder="Add intents..."
            value=""
          />
        </div>
        <div
          aria-hidden="true"
          class="options dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="option option--focused dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              bar
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<IntentsSentimentsSelect /> should render component with no selected items 1`] = `
<div
  class="MultiSelectField"
  style="display: inline-block; padding-bottom: 2px;"
>
  <div
    class="container"
  >
    <div
      class="inputContainer multiSelectOptionField-dropdown"
    >
      <div
        class="dropdown"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class=""
          data-toggle="dropdown"
        >
          <input
            autocomplete="off"
            class="input"
            placeholder="Add intents..."
            value=""
          />
        </div>
        <div
          aria-hidden="true"
          class="options dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="option option--focused dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              foo
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              bar
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<IntentsSentimentsSelect /> should render component with selected item 1`] = `
<div
  class="MultiSelectField"
  style="display: inline-block; padding-bottom: 2px;"
>
  <div
    class="container"
  >
    <span
      class="tag badge badge-secondary"
    >
      <span
        class="tagText"
      >
        bar
      </span>
      <i
        class="material-icons ml-1 closeIcon"
      >
        close
      </i>
    </span>
    <div
      class="inputContainer multiSelectOptionField-dropdown"
    >
      <div
        class="dropdown"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class=""
          data-toggle="dropdown"
        >
          <input
            autocomplete="off"
            class="input"
            placeholder="Add intents..."
            value=""
          />
        </div>
        <div
          aria-hidden="true"
          class="options dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="option option--focused dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              foo
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
